--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -6,9 +6,9 @@ $accent: #7D5822;
 
 // ~~~~~~~~~~New Colors~~~~~~~~~~
 
-$black: #050403;
+$black: #000;
 $nearblack: #221f31;
-$white: #fefefe;
+$white: #fff;
 
 $dbrown: #543516;
 $brown: #9b6e2d;
@@ -30,3 +30,4 @@ $purple: #a568d4;
 $lpurple: #9a93b7;
 
 $shadow: rgb(0 0 0 / 30%);
+$white_shadow: rgb(255 255 255 / 30%);
