--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -94,21 +94,21 @@ select {
 h1 {
   font-size: 3em;
   font-family: "Fira Mono", monospace;
-  color: #050403;
+  color: #fff;
 }
 
 h2 {
   font-size: 2em;
   font-family: "Gothic A1", sans-serif;
   font-weight: 100;
-  color: #050403;
+  color: #fff;
 }
 
 p {
   font-size: 1.5em;
   font-family: "Nanum Gothic Coding", serif;
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
-  color: #050403;
+  text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.3);
+  color: #fff;
 }
 
 strong {
@@ -120,27 +120,30 @@ em {
 }
 
 a {
-  color: #a14d3f;
-  text-decoration-color: #a14d3f;
-  text-shadow: 0px 0px 0px #fefefe;
+  color: #fff;
+  text-decoration-color: #fff;
+  text-shadow: 1px 1px 0px #fff;
   transition: color 200ms, text-shadow 200ms;
 }
 
 a:hover, a:focus, a:focus-within {
   color: #221f31;
-  text-shadow: -2px -2px 0px #a14d3f;
+  text-shadow: -2px -2px 0px #000;
   transition: color 200ms, text-shadow 200ms;
+  background-color: #fff;
 }
 
 ::selection {
-  background-color: #a14d3f;
-  color: #678fcb;
-  text-shadow: 2px 2px 0px #050403;
+  background-color: #fff;
+  color: #000;
 }
 
 main {
   display: flex;
   flex-direction: column;
+}
+
+html {
   background-image: url("../images/dark_tile.png");
   background-repeat: repeat;
   animation: moving_background 10s linear infinite;
@@ -149,14 +152,21 @@ main {
 header {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-  height: 50vw;
-  width: 100vw;
-  margin: 0 auto 0 auto;
+  justify-content: flex-end;
+  align-items: flex-end;
+  height: 45vw;
+  width: 90vw;
+  margin: 1em auto 1em auto;
   background-image: url("../images/header_gravy.png");
   background-position: center;
   background-size: cover;
+  border: 2px solid #fff;
+  box-shadow: 6px 6px 0px rgba(255, 255, 255, 0.3);
+  transition: box-shadow 300ms;
+}
+header:hover, header:focus, header:focus-within {
+  box-shadow: 8px 8px 0px rgba(255, 255, 255, 0.3);
+  transition: box-shadow 300ms;
 }
 header nav {
   display: flex;
@@ -164,6 +174,9 @@ header nav {
   background-image: url("../images/dither_black.png");
   background-repeat: repeat;
   animation: moving_background 5s linear infinite;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 300px;
 }
 header nav a {
@@ -171,7 +184,7 @@ header nav a {
   border: 8px solid transparent;
   border-image: url("../images/border_button.png") 8 round;
   height: 65px;
-  background-color: #fefefe;
+  background-color: #fff;
   transition: background-color 200ms;
   display: flex;
   flex-direction: row;
@@ -180,34 +193,36 @@ header nav a {
 }
 header nav a p {
   padding: 10px;
+  color: #000;
+  transition: color 200ms;
 }
 header nav a img {
   display: block;
+  background-color: #fff;
+  transition: background-color 200ms;
 }
 header nav a:hover, header nav a:focus, header nav a:focus-within {
   background-color: transparent;
   transition: background-color 200ms;
 }
 header nav a:hover p, header nav a:focus p, header nav a:focus-within p {
-  color: #fefefe;
-  text-shadow: 4px 4px 0px #a14d3f;
+  color: #fff;
+  transition: color 200ms;
+}
+header nav a:hover img, header nav a:focus img, header nav a:focus-within img {
+  background-color: #a14d3f;
+  transition: background-color 200ms;
 }
 header h1#title {
   background-image: url("../images/dither_black.png");
   background-blend-mode: darken;
   text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.3);
-  color: #fefefe;
+  color: #fff;
   font-weight: bolder;
   margin: 0.5em;
   padding: 4px;
-  border: 2px solid #221f31;
-  box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.3);
-  transition: box-shadow 300ms;
+  border: 1px solid #fff;
   width: 100%;
-}
-header h1#title:hover, header h1#title:focus, header h1#title:focus-within {
-  box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.3);
-  transition: box-shadow 300ms;
 }
 
 article {
@@ -218,7 +233,7 @@ article {
   padding: 0.5em;
   border: 24px solid transparent;
   border-image: url("../images/border_purple.png") 24 stretch;
-  background-image: url("../images/dither_white.png");
+  background-image: url("../images/dither_black.png");
   position: relative;
 }
 article:nth-child(odd) {
@@ -235,39 +250,39 @@ article section.header {
   background-image: url("../images/dark_tile.png");
   background-repeat: repeat;
   animation: moving_background_reverse 3s linear infinite;
-  border: 2px solid #221f31;
-  box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.3);
+  border: 2px solid #fff;
+  box-shadow: 6px 6px 0px rgba(255, 255, 255, 0.3);
   transition: box-shadow 300ms;
 }
 article section.header h2 {
-  color: #fefefe;
+  color: #fff;
   margin: 0, 0, 0.25em, 0.5em;
 }
 article section.header p.byline {
-  color: #fefefe;
+  color: #fff;
   font-size: 0.75em;
   font-family: "Fira Mono", monospace;
   margin-left: 1em;
   padding: 2px;
 }
 article section.header:hover, article section.header:focus, article section.header:focus-within {
-  box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 8px 8px 0px rgba(255, 255, 255, 0.3);
   transition: box-shadow 300ms;
 }
 article section.body {
   margin: 1em 2em 1em 2em;
-  background-color: #fefefe;
+  background-color: #000;
   padding: 8px;
-  border: 2px solid #221f31;
-  box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.3);
+  border: 2px solid #fff;
+  box-shadow: 6px 6px 0px rgba(255, 255, 255, 0.3);
   transition: box-shadow 300ms;
 }
 article section.body:hover, article section.body:focus, article section.body:focus-within {
-  box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 8px 8px 0px rgba(255, 255, 255, 0.3);
   transition: box-shadow 300ms;
 }
 
 html {
-  color: #050403;
-  background-color: #fefefe;
+  color: #000;
+  background-color: #fff;
 }
