--- a/scss/_imagevars.scss
+++ b/scss/_imagevars.scss
@@ -4,6 +4,7 @@ $transparent_border: url('../images/border_transparent.png');
 $red_border: url('../images/border_red.png');
 $green_border: url('../images/border_green.png');
 $purple_border: url('../images/border_purple.png');
+$button_border: url('../images/button_border.png');
 // Background Tiles
 $dark_tile: url('../images/dark_tile.png');
 $light_tile: url('../images/light_tile.png');
