--- a/scss/_borders.scss
+++ b/scss/_borders.scss
@@ -1,6 +1,6 @@
 // ~~~~~~~~~~ Mixin Delcarations ~~~~~~~~~~
-@mixin standard_border{
-    border: 2px solid $white;
+@mixin standard_border($color){
+    border: 2px solid $color;
     box-shadow: 6px 6px 0px $white_shadow;
     transition: box-shadow 300ms;
     &:hover, &:focus, &:focus-within{
