--- a/scss/_imagevars.scss
+++ b/scss/_imagevars.scss
@@ -10,6 +10,9 @@ $dark_tile: url('../images/dark_tile.png');
 $light_tile: url('../images/light_tile.png');
 $red_tile: url('../images/red_tile.png');
 $green_tile: url('../images/green_tile.png');
+$pink_tile: url('../images/pink_tile.png');
+$shiny_red_tile: url('../images/shiny_red_tile.png');
+$purple_tile: url('../images/purple_tile.png');
 
 $dither_white: url('../images/dither_white.png');
 $dither_black: url('../images/dither_black.png');
