--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -7,120 +7,8 @@ main{
 html{
     @include background_animation($dark_tile, 10s);
 }
-// ~~~~~~~~~~ Page header ~~~~~~~~~~
-header{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: flex-end;
-    height: 45vw;
-    width: 90vw;
-    margin: 1em auto 1em auto;
-    // Background Image
-    background-image: url('../images/header_gravy.png');
-    background-position: center;
-    background-size: cover;
-    @include standard_border($red);
-// ~~~~~~~~~~ Navigation menu ~~~~~~~~~~
-    nav{
-        display: flex;
-        @include background_animation($dither_black, 5s);
-        top: 0;
-        left: 0;
-        // Horizontal nav bar, visible by default but scrolls off the screen
-        &#horizontalnav{
-            flex-direction: row;
-            width: 90%;
-            position: absolute;
-            a{
-                img{
-                    display: none;
-                }
-            }
-        }
-        // Vertical nav, hidden by default, appears when scrolled (through JS)
-        &#verticalnav{
-            flex-direction: column;
-            width: 300px;
-            position: fixed;
-            z-index: 100;
-            // Hides the menu by default
-            transform: translate(-320px, -325px);
-            transition: transform 300ms;
-            &.visible{ // Shows the "menu" button
-                transform: translate(0px, -325px);
-                transition: transform 300ms;
-            }
-            &.show{ // Shows the rest of the menu
-                transform: translate(0px, 0px);
-                transition: transform 300ms;
-                a#navbutton img{
-                    transform: rotate(-90deg);
-                    transition: transform 300ms;
-                }
-            }
-        }
-        // Styles for the individual buttons, a tag is on the outside so the whole thing is hot
-        a{
-            flex-grow: 1;
-            height: 65px;
-            background-color: $white;
-            transition: background-color 200ms;
-            @include standard_border($black);
 
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-start;
-            align-items: center;
-
-            // The "menu" button that togges the vertical menu
-            &#navbutton{
-                cursor: pointer;
-                img{
-                    transform: rotate(90deg);
-                    transition: transform 300ms;
-                }
-            }
-            p{ // The text within the buttons
-                padding: 10px;
-                color: $black;
-                transition: color 200ms;
-            }
-            img{ // The icon within the button
-                display: block;
-                background-color: $white;
-                transition: background-color 200ms;
-            }
-
-            // Styles for when the buttons are hovered
-            &:hover, &:focus, &:focus-within{
-                background-color: transparent;
-                transition: background-color 200ms;
-                p{
-                    color: $white;
-                    transition: color 200ms;
-                }
-                img{
-                    background-color: $red;
-                    transition: background-color 200ms;
-                }
-            }
-        }
-    }
-    // The page title, at the bottom of the header image
-    h1#title{
-        background-image: url('../images/dither_black.png');
-        background-blend-mode: darken;
-        text-shadow: 4px 4px 0px $shadow;
-        color: $white;
-        font-weight: bolder;
-        margin: 0.5em;
-        padding: 4px;
-        // @include standard_border;
-        border: 1px solid $white;
-        width: 100%;
-    }
-}
+@import 'header';
 
 // ~~~~~~~~~~Article Elements~~~~~~~~~~
 
@@ -130,7 +18,7 @@ article{
     width: 800px;
     margin: 10px auto 10px auto;
     padding: 0.5em;
-    @include image_border($purple_border);
+    @include standard_border($lpurple);
     background-image: $dither_black;
     position: relative;
     &:nth-child(odd){
@@ -145,25 +33,55 @@ article{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        padding: 1em;
+        padding: 1em 1em 0.5em 1em;
+        z-index: 20;
         h2{
             color: $white;
             margin: 0, 0, 0.25em, 0.5em;
+            padding: 0.5em;
+            background-color: $black;
+            border: 1px solid $white;
+            z-index: 50;
         }
         p.byline{
             color: $white;
             font-size: 0.75em;
             @include font_code;
-            margin-left: 1em;
-            padding: 2px;
+            margin: 0 1em 0 1em;
+            padding: 4px;
+            background-color: $black;
+            border: 1px solid $white;
+            z-index: 25;
+            transform: translateY(-6px);
         }
-        @include background_animation_reverse($dark_tile, 3s);
+        @include background_animation_reverse($purple_tile, 5s);
         @include standard_border($white);
     }
     section.body{
-        margin: 1em 2em 1em 2em;
+        margin: 0 2em 1em 2em;
+        transform: translateY(-6px);
         background-color: $black;
         padding: 8px;
         @include standard_border($white);
+        z-index: 15;
+    }
+}
+
+// ~~~~~~~~~~ Footer ~~~~~~~~~~
+footer{
+    background: $white;
+    text-align: center;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    p{
+        color: $black;
+        font-size: 0.75em;
+        a{
+            color: $red;
+            &:hover, &:focus, &:focus-within{
+                color: $black;
+            }
+        }
     }
 }
