--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -7,7 +7,7 @@
 }
 @mixin font_sans{
     font-family: 'Gothic A1', sans-serif;
-    font-weight: 100;
+    font-weight: 400;
 }
 @mixin font_code{  
     font-family: 'Fira Mono', monospace;
@@ -36,6 +36,17 @@ strong{
 }
 em{
     text-shadow: 2px 2px 0px $green;
+}
+pre{
+    @include font_code;
+    color: $white;
+    font-size: 1em;
+    background-color: $nearblack;
+    padding: 1em;
+    &::selection{
+        background-color: $red;
+        color: $white;
+    }
 }
 
 // ~~~~~~~~~~Link Styles~~~~~~~~~~
