--- a/scss/_borders.scss
+++ b/scss/_borders.scss
@@ -1,17 +1,9 @@
 // ~~~~~~~~~~ Mixin Delcarations ~~~~~~~~~~
 @mixin standard_border($color){
     border: 2px solid $color;
-    box-shadow: 4px 4px 0px $white_shadow;
-    transition: box-shadow 300ms;
-    &:hover, &:focus, &:focus-within{
-        box-shadow: 8px 8px 0px $white_shadow;
-        transition: box-shadow 300ms;
-    }
 }
 @mixin article_border($color){
     border: 4px solid $color;
-    box-shadow: 4px 4px 0px $white;
-    transition: box-shadow 300ms;
 }
 @mixin image_border($image){
     border: 24px solid transparent;
@@ -20,5 +12,15 @@
 @mixin button_border{
     border: 8px solid transparent;
     border-image: url('../images/button_border.png') 16 round;
+}
+@mixin popout_shadow($color){
+    transform: translate(0px, 0px);
+    box-shadow: 0px 0px 0px $color;
+    transition: transform 250ms, box-shadow 250ms;
+    &:hover, &:focus, &:focus-within{
+        transform: translate(-4px, -4px);
+        box-shadow: 4px 4px 0px $color;
+        transition: transform 250ms, box-shadow 250ms;
+    }
 }
 // ~~~~~~~~~~~~~~~~~~~~
