--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -71,6 +71,10 @@ select {
   font: inherit;
 }
 
+*{
+  outline: none;
+}
+
 /* Remove all animations and transitions for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   * {
