--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,6 +7,7 @@
 @import "shadows";
 @import "typography";
 @import "layout";
+@import 'forms';
 // ~~~~~~~~~~~~~~~~~~~~
 
 // ~~~~~~~~~~Fallback Rules~~~~~~~~~~
